--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "eslint-config-next": "13.4.12",
     "firebase": "^10.1.0",
     "formik": "^2.4.2",
+    "msw": "^1.2.3",
     "next": "13.4.12",
     "postcss": "8.4.27",
     "react": "18.2.0",
@@ -32,5 +33,8 @@
     "tailwindcss": "3.3.3",
     "typescript": "5.1.6",
     "yup": "^1.2.0"
+  },
+  "msw": {
+    "workerDirectory": "public"
   }
 }
